# PCBsTemp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  GETTING_STARTED.md  README.md  STM32F407VGTx_FLASH.ld  build.sh  startup_stm32f407xx.s
CANopus/: CANopus.kicad_pcb  CANopus.kicad_prl  CANopus.kicad_pro  CANopus.kicad_sch  ECU_ADC.kicad_sch  ECU_Communication.kicad_sch  ECU_Decoupling.kicad_sch  ECU_Power.kicad_sch  fp-info-cache  sym-lib-table  ~CANopus.kicad_pcb.lck
CANopus/customLibrary/: 2025-11-15_22-18-39.kicad_sym  D8-L.kicad_mod  D8-M.kicad_mod  D8.kicad_mod  GCT_MEM2061-01-188-00-A_REVA.kicad_mod  SW_TS31-46-35-BK-B-260-RA-SMT-TR.kicad_mod  TS31-46-35-BK-B-260-RA-SMT-TR.kicad_sym  TS31-46-35-BK-B-260-RA-SMT-TR.step
CANopus/jlcpcb/: project.db
cmake/: arm-none-eabi-gcc.cmake
eval/: eval.kicad_prl
include/Components/: sensors.h
include/Controller/: controller.h
include/DIL/: engine_interface.h
include/HAL/: hal_init.h  stm32f4xx.h
src/: main.c
src/Components/: sensors.c
src/Controller/: controller.c
src/DIL/: engine_interface.c
src/HAL/: hal_init.c
